# vkSamples

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.sh  dependencies.sh  settings.gradle
01_keyEvents/: CMakeLists.txt  build.gradle
01_keyEvents/cpp/: main.cpp
01_keyEvents/src/main/: AndroidManifest.xml
01_keyEvents/src/main/res/values/: strings.xml  themes.xml
01_keyEvents/src/main/res/values-night/: themes.xml
02_cube/: CMakeLists.txt  build.gradle
02_cube/assets/: ReadMe.txt
02_cube/assets/shaders/: compile.bat  compile.sh
02_cube/assets/shaders/spirv/: shader_frag.spv  shader_vert.spv
02_cube/cpp/: main.cpp
02_cube/src/main/: AndroidManifest.xml
03_glTF/: CMakeLists.txt  CMakeLists.txt.old  build.gradle
03_glTF/assets/: ReadMe.txt
03_glTF/assets/DamagedHelmet/glTF/: DamagedHelmet.gltf
03_glTF/assets/shaders/: compile.sh  pbr_shader.frag  sky_shader.vert  sub1.frag  tex_shader.vert
03_glTF/assets/shaders/spirv/: pbr_frag.spv  sky_vert.spv  sub1_frag.spv
03_glTF/cpp/: Scene.h  main.cpp
03_glTF/cpp/sg/: CCamera.cpp  CCamera.h  CObject.cpp  CObject.h  CSkybox.h  DEM.h  Material.cpp  Material.h  Mesh.cpp  OffScreen.cpp  OffScreen.h  OnScreen.cpp  OnScreen.h
03_glTF/src/main/res/values/: strings.xml
04_vkRay/: CMakeLists.txt  CMakeLists.txt.old
04_vkRay/assets/shaders/: compile.bat  compile.sh  pbr_shader.frag  pbr_shader.vert  red_shader.frag  red_shader.vert  sky_shader.frag  sub1.frag
04_vkRay/assets/shaders/rt/: raytrace.rchit  raytrace.rgen  raytrace.rmiss  raytrace_2.rchit  raytrace_2.rmiss  unpack.glsl  utils.glsl
04_vkRay/assets/shaders/spirv/: pbr_frag.spv  pbr_vert.spv  raytrace.2.rchit.spv  raytrace.2.rmiss.spv  raytrace.rchit.spv  raytrace.rgen.spv  raytrace.rmiss.spv  raytrace.shadow.rmiss.spv  raytrace.spec.rchit.spv  sky_frag.spv  sky_vert.spv  sub1_frag.spv  sub1_vert.spv  tex_frag.spv  tex_vert.spv
04_vkRay/cpp/: Scene.h  main.cpp
04_vkRay/cpp/cpdf/: CImage.cpp  CImage.h  CMakeLists.txt  Logging.h  main.cpp  matrix.h
04_vkRay/cpp/dot/: source.dot  source.ps
04_vkRay/cpp/graph/: dependency_graph.py  run.sh
04_vkRay/cpp/sg/: CCamera.cpp  CCamera.h  CNode.cpp  CNode.h  CObject.cpp  CObject.h  CSkybox.cpp  CSkybox.h  DEM.h  Material.cpp  Mesh.cpp  Mesh.h  OffScreen.cpp  OnScreen.cpp  OnScreen.h  rt.h
05_ImGui/: CMakeLists.txt  build.gradle
05_ImGui/assets/: imgui.ini
05_ImGui/assets/shaders/: bindings.glsl  sub1.vert  tex_shader.frag
05_ImGui/assets/shaders/spirv/: sub1_vert.spv  tex_frag.spv
05_ImGui/cpp/: Scene.h  main.cpp
05_ImGui/cpp/sg/: CCamera.cpp  CNode.cpp  CObject.cpp  CObject.h  CSkybox.cpp  CSkybox.h  DEM.cpp  Mesh.h  OffScreen.cpp  OffScreen.h  OnScreen.cpp  OnScreen.h
05_ImGui/src/main/: AndroidManifest.xml
05_ImGui/src/main/res/layout/: activity_main.xml
05_ImGui/src/main/res/values/: strings.xml  styles.xml
05_ImGui/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
libs/Window/: CMakeLists.txt  Window.cpp  Window.h  WindowBase.cpp  WindowBase.h  keycodes.h  window_android.h  window_win32.h  window_xcb.h
libs/Window/android/: native.cpp  native.h
libs/imgui/: CMakeLists.txt  DearImGui.h  imgui_extensions.h  imgui_impl_vkWindow.cpp  imgui_impl_vkWindow.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
libs/sg/: CCamera.cpp  CCamera.h  CMakeLists.txt  CObject.cpp  CObject.h  CSkybox.cpp  CSkybox.h  Light.cpp  Light.h  Material.h  Mesh.cpp  Mesh.h  OffScreen.cpp  OffScreen.h  OnScreen.cpp  OnScreen.h  glTF.cpp  glTF.h  rt.h
libs/vkUtils/: Buffers.cpp  Buffers.h  CDevices.cpp  CDevices.h  CImage.cpp  CImage.h  CInstance.cpp  CInstance.h  CMakeLists.txt  CPipeline.cpp  CPipeline.h  CRenderpass.cpp  CRenderpass.h  CShader.cpp  CShader.h  FBO.cpp  FBO.h  Pack.cpp  Pack.h  README.md  Swapchain.cpp  Swapchain.h  Validation.cpp  Validation.h  VkFormats.h  fp16.h  matrix.h  vkImages.cpp  vkImages.h  vkWindow.cpp  vkWindow.h
libs/vkUtils/Vexel/: CMakeLists.txt  README.md  vexel.cpp  vexel.h  vexel_gen.py
libs/vkUtils/vkRay/: BLAS.cpp  BLAS.h  Descriptor.cpp  Descriptor.h  RayPipeline.cpp  RayPipeline.h  SBT.cpp  SBT.h  TLAS.cpp  TLAS.h  vkray.cpp  vkray.h  vkray_helpers.h
